tests/integrations/basic-fail/tests/actual_tests_bless/foomp_aux.rs
//@aux-build:foomp.rs

use foomp::add;

fn main() {
    add("42", 3);
    //~^ ERROR: mismatched types
}
